fix(wallet): rename action type, logs wallet activities
