# docs/swagger.json
@@ -2151,9 +2151,9 @@
                 }
             }
         },
-        "/wallet/withdraw": {
+        "/wallet/use-token": {
             "post": {
-                "description": "Withdraw a positive amount from a user's wallet if sufficient balance",
+                "description": "UseToken a positive amount from a user's wallet if sufficient balance",
                 "consumes": [
                     "application/json"
                 ],
@@ -2163,7 +2163,7 @@
                 "tags": [
                     "Wallet"
                 ],
-                "summary": "Withdraw from the wallet",
+                "summary": "UseToken from the wallet",
                 "parameters": [
                     {
                         "type": "integer",
@@ -2174,7 +2174,7 @@
                     },
                     {
                         "type": "integer",
-                        "description": "Amount to withdraw",
+                        "description": "Amount to use token",
                         "name": "amount",
                         "in": "query",
                         "required": true
@@ -2182,7 +2182,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Withdrawal successful",
+                        "description": "UseTokenal successful",
                         "schema": {
                             "$ref": "#/definitions/response.MessageResponse"
                         }
